styles/style.css
body{
    display: grid;
    grid-template-columns: 1fr; 
    grid-auto-rows: auto 1fr;
    grid-template-areas: "header" "title" "main_content" "footer";
    font-family: 'Open Sans', sans-serif;
    margin: 2rem 6rem; 
    height: 100vh;
}

header{
    grid-area: header;
    font-family: 'Open Sans', sans-serif;
}

#footer{
    padding-top: 50px;
    grid-area: footer;
    
    text-align: center;
    width: 100%;
    color: black;
    font-family: 'Open Sans', sans-serif;
    font-style: italic;
    
}



.main{
    grid-area: main_content;
    grid-template-areas: "main_map panel";
    grid-template-columns: 2fr 1fr;
    display: grid;
    grid-gap: 5rem;

}

#title{
text-align: center; 
}

#the_map{
    height:80vh;
    grid-area: main_map;  
}

h1, h2{
    text-align: center;
}

nav {
    display: flex; 
  }

  nav ul {
    list-style-type: none; 
    margin: 0;
    padding: 0;
    display: flex; 
    float: right;
  }

  nav li {
    margin-right: 10px; 
  }

  nav li:last-child {
    margin-right: 0;
  }

  nav ul li a {
    /* display: block; */
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-family: 'Open Sans', sans-serif;
  }


  nav ul li a:hover{
    text-decoration: underline;
  }

  nav ul a:active{
    font-weight: bold;
  }


  .panel{ 
    grid-area: panel; 
    overflow: auto; 
    height:80vh; 
    background-color: #ffffff;
    display: grid; 
    grid-template-rows: 1fr 5fr;
    grid-area: "buttons content";
  }
  
/* Style the buttons inside the tab */
.panel button {
  background-color: inherit;
  float: left;
  border: 2px solid #005a83;
  color: #005a83;
  outline: none;
  cursor: pointer;
  padding: 14px 16px;
  transition: 0.2s;
  font-size: 17px;
  font-family: 'Open Sans', sans-serif;
  border-radius: 5px;
  margin-left: 10px;
}

/* Change background color of buttons on hover */
.panel button:hover {
  background-color: #005a83;
  color: white;
}

/* Create an active/current tablink class */
.panel button.active {
  background-color: #005a83;
  color: white;
}

.buttons{
  grid-area: buttons; 
}

.contents{
  grid-area: contents;
}

/* Style the tab content */
.tabcontent {
  padding: 6px 12px;
}

/* info box styling */
.info {
  padding: 6px 8px;
  font: 14px/16px 'Open Sans', sans-serif;
  background: white;
  background: rgba(255,255,255,0.8);
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  border-radius: 5px;
}
.info h4 {
  margin: 0 0 5px;
  color: #777;
}

/* legend box styling */
.legend {
  line-height: 18px;
  width: 125px;
  color: #555;
}


/* close button on modal */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
  transition: 0.3s ease;
}

/* pop-up modal on mapping page */

.modal2 {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 9999; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* turn off overflow */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content2 {
  background-color: #fefefe;
  margin: 10% auto; /* 15% from the top and centered */
  padding: 20px;
  width: 80%; /* Could be more or less, depending on screen size */
  border-radius: 5px;
}

#words{
  color: black; 
  margin: 2px; 
}

 #theSurvey{
  display: block;
  margin-left: auto;
  margin-right: auto;
} 

/* make logo fit nav bar */
img {
  height: 70px;
  margin: 0;
  vertical-align:top;
  float: left;
}

pre {
  font-size: inherit;
  color: inherit;
  border: initial;
  padding: initial;
  font-family: inherit;
  }

